--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,34 @@ aiofiles==24.1.0
 aiogram==3.19.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
+aiohttpx==0.0.12
 aiosignal==1.3.2
 annotated-types==0.7.0
+anyio==4.9.0
+async-lru==2.0.5
 attrs==25.3.0
 audioread==3.0.1
+backoff==2.2.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 decorator==5.2.1
+distro==1.9.0
 filelock==3.18.0
+frozendict==2.4.6
 frozenlist==1.5.0
 fsspec==2025.3.2
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+jiter==0.9.0
 joblib==1.4.2
 lazy_loader==0.4
+lazyops==0.2.84
 llvmlite==0.44.0
+loguru==0.7.3
 magic-filter==1.0.12
 MarkupSafe==3.0.2
 more-itertools==10.6.0
@@ -40,6 +52,7 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+openai==1.72.0
 openai-whisper==20240930
 packaging==24.2
 platformdirs==4.3.7
@@ -49,6 +62,7 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dotenv==1.1.0
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 ruff==0.11.4
@@ -56,11 +70,13 @@ scikit-learn==1.6.1
 scipy==1.15.2
 setuptools==78.1.0
 six==1.17.0
+sniffio==1.3.1
 soxr==0.5.0.post1
 srt==3.5.3
 sympy==1.13.1
 threadpoolctl==3.6.0
 tiktoken==0.9.0
+todoist_api_python==2.1.7
 torch==2.6.0
 tqdm==4.67.1
 triton==3.2.0
